# StealthAI

./: .replit  INSTALL.md  README.md  README_for_macOS.md  ai_assistant.py  alternative_approach.sh  capture_and_analyze.py  capture_gui.py  config.py  create_app_and_dmg.py  create_combined_app.py  create_macos_app.py  debug_mode.py  fallback_mode.py  hidden_capture.py  invisibility_setup.sh  keyboard_hook.py  keyboard_listener.py  main.py  pyproject.toml  recursive_factorial.py  run.sh  run_macos_app.py  screen_capture.py  screen_utils.py  simple_capture.py  simple_overlay.py  simpler_capture.py  stealth_overlay.py  super_simple_overlay.py  test_api.py  test_html.html  test_keyboard.py  transparent_window.py  universal_capture.py
